@@ -1,6 +1,6 @@
 /*
  * SonarLint Language Server
- * Copyright (C) 2009-2023 SonarSource SA
+ * Copyright (C) 2009-2024 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -27,15 +27,18 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import javax.annotation.CheckForNull;
 import javax.annotation.Nullable;
 import org.sonarsource.sonarlint.core.analysis.api.ClientInputFile;
 import org.sonarsource.sonarlint.core.analysis.api.IssueLocation;
 import org.sonarsource.sonarlint.core.client.api.common.analysis.Issue;
+import org.sonarsource.sonarlint.core.clientapi.client.issue.ShowIssueParams;
+import org.sonarsource.sonarlint.core.clientapi.common.FlowDto;
+import org.sonarsource.sonarlint.core.clientapi.common.LocationDto;
 import org.sonarsource.sonarlint.core.commons.TextRange;
 import org.sonarsource.sonarlint.core.serverconnection.issues.ServerTaintIssue;
 import org.sonarsource.sonarlint.ls.LocalCodeFile;
+import org.sonarsource.sonarlint.ls.connected.ProjectBindingManager;
 import org.sonarsource.sonarlint.ls.util.Utils;
 
 public final class ShowAllLocationsCommand {
@@ -55,16 +58,50 @@ public final class ShowAllLocationsCommand {
     private final String connectionId;
     private final String creationDate;
     private final TextRange textRange;
+    private boolean codeMatches = false;
 
     private Param(Issue issue) {
       this.fileUri = nullableUri(issue.getInputFile());
       this.message = issue.getMessage();
       this.severity = issue.getSeverity().toString();
       this.ruleKey = issue.getRuleKey();
-      this.flows = issue.flows().stream().map(Flow::new).collect(Collectors.toList());
+      this.flows = issue.flows().stream().map(Flow::new).toList();
       this.textRange = issue.getTextRange();
       this.connectionId = null;
       this.creationDate = null;
+    }
+
+    public Param(ShowIssueParams showIssueParams, ProjectBindingManager projectBindingManager, String connectionId) {
+      this.fileUri = projectBindingManager.serverPathToFileUri(showIssueParams.getServerRelativeFilePath()).orElse(null);
+      this.message = showIssueParams.getMessage();
+      this.severity = "";
+      this.ruleKey = showIssueParams.getRuleKey();
+      this.flows = showIssueParams.getFlows().stream().map(flowDto -> new Flow(flowDto, projectBindingManager)).toList();
+      this.textRange = new TextRange(showIssueParams.getTextRange().getStartLine(),
+        showIssueParams.getTextRange().getStartLineOffset(),
+        showIssueParams.getTextRange().getEndLine(),
+        showIssueParams.getTextRange().getEndLineOffset());
+      this.connectionId = connectionId;
+      this.creationDate = showIssueParams.getCreationDate();
+      if (this.fileUri != null) {
+        try {
+          String localCode;
+          if (this.textRange.getStartLine() == 0 || this.textRange.getEndLine() == 0) {
+            // this is a file-level issue
+            localCode = LocalCodeFile.from(this.fileUri).content();
+          } else {
+            localCode = LocalCodeFile.from(this.fileUri).codeAt(this.textRange);
+          }
+          if (localCode == null) {
+            this.codeMatches = false;
+          } else {
+            this.codeMatches = showIssueParams.getCodeSnippet().equals(localCode);
+          }
+        } catch (Exception e) {
+          // not a valid range
+          this.codeMatches = false;
+        }
+      }
     }
 
     Param(ServerTaintIssue issue, String connectionId, Function<String, Optional<URI>> pathResolver, Map<URI, LocalCodeFile> localFileCache) {
@@ -72,7 +109,7 @@ public final class ShowAllLocationsCommand {
       this.message = issue.getMessage();
       this.severity = issue.getSeverity().toString();
       this.ruleKey = issue.getRuleKey();
-      this.flows = issue.getFlows().stream().map(f -> new Flow(f, pathResolver, localFileCache)).collect(Collectors.toList());
+      this.flows = issue.getFlows().stream().map(f -> new Flow(f, pathResolver, localFileCache)).toList();
       this.textRange = issue.getTextRange();
       this.connectionId = connectionId;
       this.creationDate = DateTimeFormatter.ISO_DATE_TIME.format(issue.getCreationDate().atOffset(ZoneOffset.UTC));
@@ -111,17 +148,25 @@ public final class ShowAllLocationsCommand {
     public TextRange getTextRange() {
       return textRange;
     }
+
+    public boolean getCodeMatches() {
+      return codeMatches;
+    }
   }
 
   static class Flow {
     private final List<Location> locations;
 
     private Flow(org.sonarsource.sonarlint.core.analysis.api.Flow flow) {
-      this.locations = flow.locations().stream().map(Location::new).collect(Collectors.toList());
+      this.locations = flow.locations().stream().map(Location::new).toList();
+    }
+
+    private Flow(FlowDto flow, ProjectBindingManager projectBindingManager) {
+      this.locations = flow.getLocations().stream().map(locationDto -> new Location(locationDto, new HashMap<>(), projectBindingManager)).toList();
     }
 
     private Flow(ServerTaintIssue.Flow flow, Function<String, Optional<URI>> pathResolver, Map<URI, LocalCodeFile> localFileCache) {
-      this.locations = flow.locations().stream().map(l -> new Location(l, pathResolver, localFileCache)).collect(Collectors.toList());
+      this.locations = flow.locations().stream().map(l -> new Location(l, pathResolver, localFileCache)).toList();
     }
 
     public List<Location> getLocations() {
@@ -134,8 +179,8 @@ public final class ShowAllLocationsCommand {
     private final URI uri;
     private final String filePath;
     private final String message;
-    private final boolean exists;
-    private final boolean codeMatches;
+    private boolean exists = false;
+    private boolean codeMatches = false;
 
     private Location(IssueLocation location) {
       this.textRange = location.getTextRange();
@@ -146,11 +191,27 @@ public final class ShowAllLocationsCommand {
       this.codeMatches = true;
     }
 
-    private Location(ServerTaintIssue.ServerIssueLocation location, Function<String, Optional<URI>> pathResolver, Map<URI, LocalCodeFile> localCodeCache) {
-      this.textRange = location.getTextRange();
-      this.uri = pathResolver.apply(location.getFilePath()).orElse(null);
-      this.filePath = location.getFilePath();
+    private Location(LocationDto location, Map<URI, LocalCodeFile> localCodeCache, ProjectBindingManager projectBindingManager) {
+      this.textRange = new TextRange(location.getTextRange().getStartLine(),
+        location.getTextRange().getStartLineOffset(),
+        location.getTextRange().getEndLine(),
+        location.getTextRange().getEndLineOffset());
+      this.uri = projectBindingManager.serverPathToFileUri(location.getFilePath()).orElse(null);
       this.message = location.getMessage();
+      this.filePath = location.getFilePath();
+      String localCode = codeExists(localCodeCache);
+      if (localCode != null) {
+        this.exists = true;
+        var locationTextRange = location.getTextRange();
+        if (locationTextRange == null) {
+          this.codeMatches = false;
+        } else {
+          this.codeMatches = location.getCodeSnippet().equals(localCode);
+        }
+      }
+    }
+
+    private String codeExists(Map<URI, LocalCodeFile> localCodeCache) {
       if (this.uri == null) {
         this.exists = false;
         this.codeMatches = false;
@@ -160,15 +221,27 @@ public final class ShowAllLocationsCommand {
           this.exists = false;
           this.codeMatches = false;
         } else {
-          this.exists = true;
-          var locationTextRange = location.getTextRange();
-          if (locationTextRange == null) {
-            this.codeMatches = false;
-          } else {
-            var textRangeHash = locationTextRange.getHash();
-            var localCodeHash = Utils.hash(localCode);
-            this.codeMatches = textRangeHash.equals(localCodeHash);
-          }
+          return localCode;
+        }
+      }
+      return null;
+    }
+
+    private Location(ServerTaintIssue.ServerIssueLocation location, Function<String, Optional<URI>> pathResolver, Map<URI, LocalCodeFile> localCodeCache) {
+      this.textRange = location.getTextRange();
+      this.uri = pathResolver.apply(location.getFilePath()).orElse(null);
+      this.filePath = location.getFilePath();
+      this.message = location.getMessage();
+      String localCode = codeExists(localCodeCache);
+      if (localCode != null) {
+        this.exists = true;
+        var locationTextRange = location.getTextRange();
+        if (locationTextRange == null) {
+          this.codeMatches = false;
+        } else {
+          var textRangeHash = locationTextRange.getHash();
+          var localCodeHash = Utils.hash(localCode);
+          this.codeMatches = textRangeHash.equals(localCodeHash);
         }
       }
     }
