@@ -1,6 +1,6 @@
 /*
  * SonarLint Language Server
- * Copyright (C) 2009-2023 SonarSource SA
+ * Copyright (C) 2009-2024 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -21,10 +21,13 @@ package org.sonarsource.sonarlint.ls.connected.domain;
 
 import java.time.Instant;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 import org.jetbrains.annotations.Nullable;
+import org.sonarsource.sonarlint.core.commons.CleanCodeAttribute;
+import org.sonarsource.sonarlint.core.commons.ImpactSeverity;
 import org.sonarsource.sonarlint.core.commons.IssueSeverity;
 import org.sonarsource.sonarlint.core.commons.RuleType;
+import org.sonarsource.sonarlint.core.commons.SoftwareQuality;
 import org.sonarsource.sonarlint.core.commons.TextRangeWithHash;
 import org.sonarsource.sonarlint.core.serverconnection.issues.ServerTaintIssue;
 import org.sonarsource.sonarlint.ls.AnalysisScheduler;
@@ -33,9 +36,11 @@ public class TaintIssue extends ServerTaintIssue {
   private String source;
   public TaintIssue(String key, boolean resolved, String ruleKey, String message, String filePath,
     Instant creationDate, IssueSeverity severity, RuleType type, @Nullable TextRangeWithHash textRange,
-     List<Flow> flows, @Nullable String ruleDescriptionContextKey, String source) {
-    super(key, resolved, ruleKey, message, filePath, creationDate, severity, type, textRange, ruleDescriptionContextKey);
+     List<Flow> flows, @Nullable String ruleDescriptionContextKey, String source, @Nullable CleanCodeAttribute cleanCodeAttribute,
+    Map<SoftwareQuality, ImpactSeverity> impacts, boolean isOnNewCode) {
+    super(key, resolved, ruleKey, message, filePath, creationDate, severity, type, textRange, ruleDescriptionContextKey, cleanCodeAttribute, impacts);
     this.setFlows(flows);
+    this.setIsOnNewCode(isOnNewCode);
     this.source = source;
   }
 
@@ -51,7 +56,8 @@ public class TaintIssue extends ServerTaintIssue {
     return new TaintIssue(serverTaintIssue.getKey(), serverTaintIssue.isResolved(), serverTaintIssue.getRuleKey(),
       serverTaintIssue.getMessage(), serverTaintIssue.getFilePath(), serverTaintIssue.getCreationDate(), serverTaintIssue.getSeverity(),
       serverTaintIssue.getType(), serverTaintIssue.getTextRange(), serverTaintIssue.getFlows(),
-      serverTaintIssue.getRuleDescriptionContextKey(), source);
+      serverTaintIssue.getRuleDescriptionContextKey(), source, serverTaintIssue.getCleanCodeAttribute().orElse(null),
+      serverTaintIssue.getImpacts(), serverTaintIssue.isOnNewCode());
   }
 
   public static List<TaintIssue> from(List<ServerTaintIssue> serverTaintIssues, boolean isSonarCloudAlias) {
@@ -59,6 +65,6 @@ public class TaintIssue extends ServerTaintIssue {
     return serverTaintIssues
       .stream()
       .map(serverTaintIssue -> TaintIssue.from(serverTaintIssue, source))
-      .collect(Collectors.toList());
+      .toList();
   }
 }
